<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/SparePartsViewerExternalVerticalMargin"
              android:layout_marginBottom="@dimen/SparePartsViewerExternalVerticalMargin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/SparePartsViewerInternalMarginRight"
            android:text="@string/DescriptionLabel"
            android:textSize="@dimen/SparePartsViewerTextSize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/SparePartsDescriptionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/SparePartsViewerTextSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/SparePartsViewerInternalMarginRight"
            android:text="@string/TypeLabel"
            android:textSize="@dimen/SparePartsViewerTextSize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/SparePartsModelItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/SparePartsViewerTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/SparePartsViewerInternalMarginRight"
            android:text="@string/ProducerLabel"
            android:textSize="@dimen/SparePartsViewerTextSize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/SparePartsProducerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/SparePartsViewerTextSize"/>
    </LinearLayout>


</LinearLayout>