<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SparePartNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/SparePartViewerHeadlineTextSize"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/SparePartNumberText"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/SparePartViewerNormalMarginBottom"
                    android:layout_marginRight="@dimen/sparePartViewerNormalMarginRight"
                    android:text="@string/DescriptionLabel"
                    android:textSize="@dimen/SparePartViewerNormalText"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/SparePartDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/SparePartViewerNormalText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/SparePartViewerNormalMarginBottom"
                    android:layout_marginRight="@dimen/sparePartViewerNormalMarginRight"
                    android:text="@string/TypeLabel"
                    android:textSize="@dimen/SparePartViewerNormalText"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/SparePartTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/SparePartViewerNormalText"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/SparePartViewerNormalMarginBottom"
                    android:layout_marginRight="@dimen/sparePartViewerNormalMarginRight"
                    android:text="@string/ProducerLabel"
                    android:textSize="@dimen/SparePartViewerNormalText"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/SparePartProducerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/SparePartViewerNormalText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/SparePartViewerNormalMarginBottom"
                    android:layout_marginRight="@dimen/sparePartViewerNormalMarginRight"
                    android:text="@string/LocationLabel"
                    android:textSize="@dimen/SparePartViewerNormalText"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/SparePartLocationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/SparePartViewerNormalText"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>